// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletTransactionDetails.vue [AddLiquidity, finalized]: should be rendered correctly 1`] = `
<wallet-base-stub
  actionicon=""
  actiontooltip=""
  showback="true"
  title=""
  tooltip=""
>
  <div
    class="transaction"
  >
    <transaction-hash-view-stub
      translation="transaction.blockId"
      type="block"
      value="0xB8c77482e45F1F4d123DeRwQ5F52C74426C6DD"
    />
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <span
          class="transaction-status"
        >
          
        </span>
         
        <s-icon-stub
          name="basic-check-mark-24"
          size="16px"
        />
      </info-line-stub>
       
      <!---->
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value="27.11.2020, 11:59:59"
      />
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <formatted-amount-stub
          assetsymbol="XOR"
          class="info-line-value"
          fontsizerate="medium"
          fontweightrate="small"
          value="0.1"
        >
          <!---->
        </formatted-amount-stub>
      </info-line-stub>
       
      <info-line-stub
        assetsymbol="PSWAP"
        fiatvalue=""
        isformatted="true"
        label=""
        labeltooltip=""
        value="0.9"
      />
    </div>
     
    <transaction-hash-view-stub
      translation="transaction.from"
      type="account"
      value="5HVmWWpBi69cmmDqWE4R6yxxJ2pveRnfozNg5K"
    />
     
    <!---->
  </div>
</wallet-base-stub>
`;

exports[`WalletTransactionDetails.vue [RegisterAsset, finalized]: should be rendered correctly 1`] = `
<wallet-base-stub
  actionicon=""
  actiontooltip=""
  showback="true"
  title=""
  tooltip=""
>
  <div
    class="transaction"
  >
    <transaction-hash-view-stub
      translation="transaction.blockId"
      type="block"
      value="0xB8c77482e45F1F4d123DeRwQ5F52C74426C6DD"
    />
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <span
          class="transaction-status"
        >
          
        </span>
         
        <s-icon-stub
          name="basic-check-mark-24"
          size="16px"
        />
      </info-line-stub>
       
      <!---->
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value="27.11.2020, 11:59:59"
      />
       
      <!---->
       
      <!---->
    </div>
     
    <transaction-hash-view-stub
      translation="transaction.from"
      type="account"
      value="5HVmWWpBi69cmmDqWE4R6yxxJ2pveRnfozNg5K"
    />
     
    <!---->
  </div>
</wallet-base-stub>
`;

exports[`WalletTransactionDetails.vue [RemoveLiquidity, finalized]: should be rendered correctly 1`] = `
<wallet-base-stub
  actionicon=""
  actiontooltip=""
  showback="true"
  title=""
  tooltip=""
>
  <div
    class="transaction"
  >
    <transaction-hash-view-stub
      translation="transaction.blockId"
      type="block"
      value="0xB8c77482e45F1F4d123DeRwQ5F52C74426C6DD"
    />
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <span
          class="transaction-status"
        >
          
        </span>
         
        <s-icon-stub
          name="basic-check-mark-24"
          size="16px"
        />
      </info-line-stub>
       
      <!---->
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value="27.11.2020, 11:59:59"
      />
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <formatted-amount-stub
          assetsymbol="XOR"
          class="info-line-value"
          fontsizerate="medium"
          fontweightrate="small"
          value="100.123"
        >
          <span
            class="formatted-amount__divider"
          >
            
          </span>
           
          <span
            class="formatted-amount__symbol"
          >
            PSWAP
          </span>
        </formatted-amount-stub>
      </info-line-stub>
       
      <!---->
    </div>
     
    <transaction-hash-view-stub
      translation="transaction.from"
      type="account"
      value="5HVmWWpBi69cmmDqWE4R6yxxJ2pveRnfozNg5K"
    />
     
    <!---->
  </div>
</wallet-base-stub>
`;

exports[`WalletTransactionDetails.vue [Swap, error]: should be rendered correctly 1`] = `
<wallet-base-stub
  actionicon=""
  actiontooltip=""
  showback="true"
  title=""
  tooltip=""
>
  <div
    class="transaction"
  >
    <transaction-hash-view-stub
      translation="transaction.blockId"
      type="block"
      value="0xB8c77482e45F1F4d123DeRwQ5F52C74426C6DD"
    />
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <span
          class="transaction-status transaction-status--error"
        >
          
        </span>
         
        <!---->
      </info-line-stub>
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <span
          class="transaction-status transaction-status--error"
        >
          Test error message!
        </span>
      </info-line-stub>
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value="27.11.2020, 11:59:59"
      />
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <formatted-amount-stub
          assetsymbol="XOR"
          class="info-line-value"
          fontsizerate="medium"
          fontweightrate="small"
          value="0.1"
        >
          <!---->
        </formatted-amount-stub>
      </info-line-stub>
       
      <info-line-stub
        assetsymbol="PSWAP"
        fiatvalue=""
        isformatted="true"
        label=""
        labeltooltip=""
        value="0.9"
      />
    </div>
     
    <transaction-hash-view-stub
      translation="transaction.from"
      type="account"
      value="5HVmWWpBi69cmmDqWE4R6yxxJ2pveRnfozNg5K"
    />
     
    <!---->
  </div>
</wallet-base-stub>
`;

exports[`WalletTransactionDetails.vue [Transfer, finalized]: should be rendered correctly 1`] = `
<wallet-base-stub
  actionicon=""
  actiontooltip=""
  showback="true"
  title=""
  tooltip=""
>
  <div
    class="transaction"
  >
    <transaction-hash-view-stub
      translation="transaction.txId"
      type="id"
      value="0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
    />
     
    <div
      class="info-line-container"
    >
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <span
          class="transaction-status"
        >
          
        </span>
         
        <s-icon-stub
          name="basic-check-mark-24"
          size="16px"
        />
      </info-line-stub>
       
      <!---->
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value="27.11.2020, 11:59:59"
      />
       
      <info-line-stub
        assetsymbol=""
        fiatvalue=""
        label=""
        labeltooltip=""
        value=""
      >
        <formatted-amount-stub
          assetsymbol="XOR"
          class="info-line-value"
          fontsizerate="medium"
          fontweightrate="small"
          value="0.1"
        >
          <!---->
        </formatted-amount-stub>
      </info-line-stub>
       
      <!---->
    </div>
     
    <transaction-hash-view-stub
      translation="transaction.from"
      type="account"
      value="5HVmWWpBi69cmmDqWE4R6yxxJ2pveRnfozNg5K"
    />
     
    <transaction-hash-view-stub
      translation="transaction.to"
      type="account"
      value="0xB8c77482e45F1F4d123DeRwQ5F52C74426C6DD"
    />
  </div>
</wallet-base-stub>
`;
